force-app/main/default/objects/Salesforce_Platform_Roadmap__c/Salesforce_Platform_Roadmap__c.object-meta.xml
<CustomObject>
    <label>Salesforce Platform Roadmap</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Roadmap Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Platform Roadmap</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>