force-app/main/default/objects/Salesforce_Platform_Roadmap__c/fields/Business_Unit_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Salesforce_Platform_Roadmap</relationshipName>
    <type>Lookup</type>
</CustomField>