force-app/main/default/objects/Salesforce_Platform_Roadmap__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>