force-app/main/default/objects/Salesforce_Platform_Roadmap__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>