force-app/main/default/objects/Salesforce_Platform_Roadmap__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>