force-app/main/default/objects/Salesforce_Platform_Roadmap__c/fields/Requested_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Completion Date</label>
    <type>Date</type>
</CustomField>