force-app/main/default/objects/Salesforce_Platform_Roadmap__c/fields/Requires_IT_Resources__c.field-meta.xml
<CustomField>
    <fullName>Requires_IT_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires IT Resources</label>
    <type>Checkbox</type>
</CustomField>